syntax="proto3";

option go_package=".;proto";

service Greeter{
  rpc GetStream(StreamReqData) returns (stream StreamResData);// 服务端 stream 模式
  rpc PutStream(stream StreamReqData) returns ( StreamResData); // 客户端 stream 模式
  rpc All(stream StreamReqData) returns (stream StreamResData);// 双向 stream 模式
}

message StreamReqData{
  string data=1;
}

message StreamResData{
  string data = 1;
}